# autonomous-agent-prediction

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run_proxy_eval.py
autonomous_agent_prediction/: __init__.py  dataset.py  features.py  plots.py
autonomous_agent_prediction/modeling/: predict.py  train.py
docs/: memory.md  mkdocs.yml
docs/docs/: index.md
notebooks/: 01-fe-categorical-encoding-agent.ipynb  02-lean-gbdt-baseline-agent.ipynb
notebooks/community_notebooks/: gemini-flash-pro-baseline.ipynb
notebooks/demo_notebooks/: autonomous-agent-prediction-beta-aide-agent.ipynb  autonomous-agent-prediction-beta-demo-agent.ipynb
submissions/01_fe_categorical_encoding/agent/prompts/: system.md
submissions/01_fe_categorical_encoding/agent/skills/feature-engineer/: SKILL.md
submissions/02_lean_gbdt_baseline/agent/prompts/: system.md
submissions/02_lean_gbdt_baseline/agent/skills/lean-gbdt-baseline/: SKILL.md
submissions/03_lean_gbdt_hybrid/agent/: agent.yaml
submissions/03_lean_gbdt_hybrid/agent/prompts/: system.md
submissions/04_liberty_recipe/agent/: agent.yaml
submissions/04_liberty_recipe/agent/prompts/: system.md
submissions/05_diverse_ensemble/agent/prompts/: system.md
submissions/06_stronger_llm/agent/: agent.yaml
submissions/06_stronger_llm/agent/prompts/: system.md
submissions/07_encoding_plus_ensemble/agent/prompts/: data_analyst.md  system.md
submissions/07_encoding_plus_ensemble/agent/tools/: data_analyst.yaml
submissions/08_proxy_dry_run/agent/: agent.yaml
submissions/submission/agent/prompts/: system.md
(+21 files in other folders)
